# libdither

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Cargo_old.toml  README.md  TODO.txt  default.nix  flake.nix  shell.nix  test.sh
app/src/: app.rs  main.rs
app/src/chat/: message.rs
chat/: Cargo.toml  mod.rs
chat/app/: Cargo.toml
chat/app/src/: app.rs  main.rs  style.rs
chat/app/src/chat/: message.rs  mod.rs  subscription.rs
chat/app/src/chat/channel/: message.rs  mod.rs
chat/cmd/src/: app.yml  main.rs
chat/src/: lib.rs  types.rs
cmd/: Cargo.toml
cmd/src/: main.rs
core/: Cargo.toml
core/src/: behaviour.rs  lib.rs
core/src/chat/: message.rs
examples/onion_routing/: main.rs
floodsub_test/: Cargo.toml
floodsub_test/src/: main.rs
ideas/: applications.md  copyright-is-cancer.md  dithca.md  dither-chat.md  dither.md  dithgit.md  dithix.md  nomia.md
ideas/applications/: analytics.md  dither-chat.md  dither-coin.md  dither-dex.md  tree-of-math.md
ideas/dither/: application-design-philosophy.md  directional-trail-search.md  distance-based-routing.md  dither-consensus.md  reverse-hash-lookup.md  self-defining-structures.md  user-management.md  zero-knowledge-proofs.md
node/: Cargo.toml  node_old_reference.rs
node/src/: coordinator.rs  discovery.rs  latency_metrics.rs  lib.rs  nc_system.rs  net.rs  packet.rs  packet_reference.rs  ping.rs  remote.rs  session.rs  systems.rs  transport.rs
node/src/systems/: discovery.rs  latency_metrics.rs  logging.rs  nc_system.rs  routing.rs
node/src/transport/: encryption.rs  generic_writer.rs
node_old/: Cargo.toml
node_old/src/: coordinator.rs  net.rs  packet.rs  session_reference.rs
pubsub_test/: Cargo.toml
pubsub_test/src/: main.rs
src/: behaviour.rs  bin.rs  commands.rs  config.rs  encryption.rs  lib.rs  lib_old.rs  main.rs  net_tcp_noenc.rs  net_tcp_noise.rs  routing.rs  sim_main.rs  types.rs
src/dither_old/: behaviour_old.rs
src/dither_old/behaviour/: dither.proto  mod.rs
src/user/: data.rs  mod.rs
src_old/: config.rs  lib.rs
src_old/dither_old/behaviour/: protocol.rs
tests/: initialize.yaml
tests/3_node_connect/: config.yaml  normal_node.json  start_node.json
tests/initialize/: config.yaml
tests/small_net_connect/: 20_node_graph.gml  config.yaml  regular_node.json
