[package]
name = "libdither"
version = "0.1.0"
authors = ["zyansheep <zyansheep@github.com>"]
edition = "2021"
description = "Wraps Node API with platform-specific features"
default-run = "libdither"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
futures = "0.3.26"
log = "0.4.17"

node = { path = "node" }
serde = { version = "1.0.152", features = ["derive"] }
async-std = { version = "1.12.0", features = [ "attributes" ] }
rkyv = { version = "0.7.40", features = ["validation"] }
thiserror = "1.0.38"
rustyline-async = "0.3.1"
simplelog = "0.12.0"
snow = "0.9.1"
bevy_ecs = "0.10"
rand = "0.8.5"
chumsky = "0.9.0"
bincode = "1.3.3"
rkyv_codec = "0.3.1"
serde_json = "1.0.93"
bytecheck = "0.7.0"
futures-delay-queue = "0.5.2"

[[bin]]
name = "sim_bin"
path = "src/sim_main.rs"

[[bin]]
name = "libdither"
path = "src/main.rs"

[patch.crates-io]
rkyv_codec = { git = 'https://github.com/zyansheep/rkyv_codec' }
