[package]
name = "dither-chat"
version = "0.1.0"
authors = ["Zyansheep <zyansheep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dither = { path = "../" }
serde_derive = "1.0.116"
serde = "1.0.116"
tokio = { version = "0.2.22", features = ["sync"] }
serde_json = "1.0.58"
log = "0.4.11"
