[package]
name = "dither-cmd"
version = "0.1.0"
authors = ["Zyansheep <zyansheep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dither"
path = "src/main.rs"

[dependencies]
dither-core = { path = "../core" }