[package]
name = "dither-core"
version = "0.1.0"
authors = ["Zyansheep <zyansheep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dither_core"

[dependencies]
tokio = {version = "0.2.22", features = ["full"]}
futures = "0.3.5"
serde_json = "1.0.57"
log = "0.4.11"
serde_derive = "1.0.116"
serde = "1.0.116"

[dependencies.libp2p]
default-features = false
version = "0.28.1"
features = [ "tcp-tokio", "mdns-tokio", "floodsub", "identify", "yamux", "mplex", "noise", "websocket", "dns" ]