[package]
name = "floodsub_test"
version = "0.1.0"
authors = ["Zyansheep <zyansheep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.28.1"
futures = "0.3.5"
env_logger = "0.7.1"
tokio = {version = "0.2.22", features = ["full"]}
