[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async
async-std = { version = "1.12.0", features = ["unstable"] }
futures = "0.3.26"
thiserror = "1.0.38"
eyre = "0.6.8"

# ECS
bevy_ecs = "0.10"

# Serialization
# Important: rkyv endianness must be little-endian everywhere
rkyv = { version = "0.7.40", features = ["validation", "archive_le"] } # Zero-Copy Serialization
bytecheck = "0.6.10"
rkyv_codec = "0.4.0"
serde = "1.0.152"

# Data & Utilities
hashdb = { git = "https://github.com/libdither/disp" }
nalgebra = { version = "0.32.1", features = ["rkyv-serialize", "serde-serialize"] }
num = "0.4.0"
log = "0.4.17"
derive_more = "0.99.17"
nnmf_nalgebra = "0.1.0"
argmin = { version = "0.8.1" }
argmin-math = { version = "0.3", features = ["nalgebra_latest-serde"] }
rand = "0.8.5"
pin-project = "1.0.12"
either = "1.8.1"
bytes = "1.4.0"

# Encryption
snow = "0.9.2"
rustls = "0.21.0"
slice-ring-buffer = "0.3.2"
thingbuf = "0.1.3"
arc-swap = "1.6.0"
