[package]
name = "dither-app"
version = "0.1.0"
authors = ["Zyansheep <zyansheep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dither"
path = "src/main.rs"

[dependencies]
dither-chat = { path = "../" }
iced = "0.1.1"
tokio = {version = "0.2.22", features = ["full"]}
log = "0.4.11"
env_logger = "0.7.1"
dither = { path = "../.." }
iced_native = "0.2.2"
